Fixed bug in carousel - carousel now responsive!! -images no longer overlap on large screens -images not too small for small screens

--- a/css-files/animal-profile.css
+++ b/css-files/animal-profile.css
@@ -5,7 +5,7 @@
 .carousel {
     position: relative;
     height: 500px;
-    width: 35%;
+    width: 500px;
     margin: 0 auto;
 }
 
@@ -195,4 +195,13 @@
     margin: 2em 0 5em;
     width: 200px;
     align-self: center;
+}
+
+/* SMALL SCREEN*/
+
+@media (max-width: 50em) {
+    .carousel {
+        height: 350px;
+        width: 350px;
+    }
 }
